--- a/themes/mypiggyback/assets/css/responsive.css
+++ b/themes/mypiggyback/assets/css/responsive.css
@@ -167,6 +167,9 @@
 		width: 135px!important;
 		font-size: 18px!important;
 	}
+	.fl-h2.ops-title, .fl-h2.order-step-title, .fl-h2.order-step-title{
+		font-size: 26px!important;
+	}
 
 }
 
